update action scripts

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
           $name = ("${{ github.event.repository.name }}".Substring(4) -split '-') | ForEach-Object { $_.Substring(0, 1).ToUpper() + $_.Substring(1).ToLower() } | Join-String -Separator ' ';
           echo "name=$name" >> $env:GITHUB_OUTPUT
 
+          echo "${{ github.event.base_ref }}"
+
           if ("${{ github.event.base_ref }}" -match '^v[0-9]+.[0-9]+.[0-9]+$') {
             echo "is_test=true" >> $env:GITHUB_OUTPUT
           } else {
