--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,9 @@ jobs:
           $name = ("${{ github.event.repository.name }}".Substring(4) -split '-') | ForEach-Object { $_.Substring(0, 1).ToUpper() + $_.Substring(1).ToLower() } | Join-String -Separator ' ';
           echo "name=$name" >> $env:GITHUB_OUTPUT
 
-          echo "${{ github.event.base_ref }}"
+          echo "${{ github.ref_name }}"
 
-          if ("${{ github.event.base_ref }}" -match '^v[0-9]+.[0-9]+.[0-9]+$') {
+          if ("${{ github.ref_name }}" -match '^v[0-9]+.[0-9]+.[0-9]+$') {
             echo "is_test=true" >> $env:GITHUB_OUTPUT
           } else {
             echo "is_test=false" >> $env:GITHUB_OUTPUT
